--- a/gala/email_2023.html
+++ b/gala/email_2023.html
@@ -187,7 +187,7 @@
   <div class="toast-container position-fixed bottom-0 end-0 p-3">
     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="toast-header">
-        <strong class="me-auto">dasayon5160@gmail.com</strong>
+        <strong class="me-auto" >Notification</strong>
         <small></small>
         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
       </div>
